# Forge

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: sample_transpilation.py
src/forge/: __init__.py  __main__.py
src/forge/cli/: __init__.py  main.py
src/forge/llm/: __init__.py  anthropic_llm.py  llm_config.py  llm_translator.py  openai_llm.py
src/forge/lsp/: __init__.py  protocol.py  server.py
src/forge/parsers/: __init__.py  base.py  go_parser.py  python_parser.py  rust_parser.py  typescript_parser.py
src/forge/transpiler/: core.py  language.py
src/forge/types/: __init__.py  primitive_types.py  type_mapper.py
src/forge/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_language.py  test_parsers.py  test_transpiler.py  test_type_mapper.py
